spec/.test/config/invalid/not_array/aliases.php
<?php

return [
    'parameters' => [],
    'aliases' => 1,
    'factories' => [],
    'extensions' => [],
    'tags' => [],
];
